set up back end app running instance.

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 LISTEN_PORT=9080
-DB_USER=postgres
-DB_PASSWORD=postgres
+DB_USER=sigma
+DB_PASSWORD=sigma@123
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=delta-db
+DB_NAME=sigma-db
 DB_DISABLE_TLS=true
 DB_MIGRATIONS_PATH=./db/migrations
 CAMPAY_PASSWORD=
