updated db/api configs

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,8 @@ DB_PORT=5432
 DB_NAME=sigma-db
 DB_DISABLE_TLS=true
 DB_MIGRATIONS_PATH=./db/migrations
-CAMPAY_PASSWORD=
-CAMPAY_USER=
-CAMPAY_BASE_URL=
+CAMPAY_PASSWORD=xxxxx
+CAMPAY_USER=xxxxxxxx
+CAMPAY_BASE_URL=xxxx
+WEBHOOK_APP_KEY=xxxxx
 ALLOWED_ORIGINS='*'
